--- a/views/link.ejs
+++ b/views/link.ejs
@@ -567,13 +567,25 @@
                                         <i class="fa-brands fa-github card-img mt-3"
                                             style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
+                                            <h5 class="card-title">Packt></h5>
+                                            <a href="https://github.com/PacktPublishing" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
                                             <h5 class="card-title">Ageron Git hub</h5>
                                             <a href="https://github.com/ageron/handson-ml3" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
                                 </div>
-
+                                
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
                                         <i class="fa-brands fa-github card-img mt-3"
