Add more link to link page

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 15-03-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 31-03-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -111,6 +111,18 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Visualize Code</h5>
                                             <a href="https://pythontutor.com/visualize.html#mode=edit"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-leaf mt-3" style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Latex</h5>
+                                            <a href="https://www.overleaf.com/project"
                                                 class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
@@ -498,6 +510,18 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-solid fa-grip-lines-vertical card-img mt-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Wandb AI</h5>
+                                            <a href="https://wandb.ai/home" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fa-solid fa-atom card-img mt-3"
                                             style="font-size: 3.5em; color: black ;"></i>
                                         <div class="card-body">
@@ -569,6 +593,18 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Packt></h5>
                                             <a href="https://github.com/PacktPublishing" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-github card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Python for microscopits</h5>
+                                            <a href="https://github.com/bnsreenu/python_for_microscopists" class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
                                     </div>
