--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,6 +1,6 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
-        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 21-11-2023 -->
+        <!-- Filename: contact.ejs | Author: Juan Arevalo | Date: 18-05-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-4 float-sm-start">
                 <div class="jumbotron text-between">
@@ -9,7 +9,7 @@
                 <div class="d-flex flex-sm-row flex-column py-5">
                     <div class="p-2 flex-fill">
                         <div class="card-body text-center">
-                            <img src="../assets/images/juanAre.jpg" alt="Juan" class="rounded-circle img-fluid" style="width: 150px;">
+                            <img src="../assets/images/juan.png" alt="Juan" class="rounded-circle img-fluid" style="width: 150px;">
                             <h5 class="my-3">Juan Arevalo</h5>
                             <p class="text-muted mb-1">AI Learner & Expert in Mining Equipment Wear Solutions</p>
                             <a href="/" class="text-muted mb-3" style="display: block;" target="_blank">jbaruz.dev</a>
