--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 11-09-2023 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 18-05-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -16,7 +16,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseOne1" aria-expanded="false"
                                 aria-controls="flush-collapseOne1">
-                            <h5>AI and Web Development Initiatives</h5>
+                            <h5>AI and Web Development Initiatives at the College time</h5>
                             </button>
                         </h2>
                     </div>
