Update My Projects Page

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -6,7 +6,7 @@
 
                 <!-- Introduction section-->
                 <div class="jumbotron bg-gradient-light text-center">
-                    <h1 class="display-7">My Projects</h1>
+                    <h1 class="display-7">Projects</h1>
                 </div>
 
                 <!-- AI and Web Development Initiatives section -->
