--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 18-05-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 19-05-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -16,7 +16,7 @@
                             <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                                 data-bs-target="#flush-collapseOne1" aria-expanded="false"
                                 aria-controls="flush-collapseOne1">
-                            <h5>AI and Web Development Initiatives at the College time</h5>
+                            <h5>Projects at college: AI and Web Development</h5>
                             </button>
                         </h2>
                     </div>
@@ -31,14 +31,66 @@
 
                         <!-- Projects grid -->
                         <div class="row align-items-stretch">
-                            <!-- AI Project -->
                             <div class="row">
+                                <!-- Brain tumor detection Project -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/deeplearn.png" alt="tumor prediction"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Brain Tumor Classification and Generation Image</h5>
+                                            <p>The project explores supervised, unsupervised and state-of-the-art 
+                                                deep learning techniques applied to image classification and image
+                                                 generation tasks.</p>
+                                            <p><strong>Role:</strong> Backend Developer</p>
+                                            <p><strong>Skills:</strong> Python, Deep Learning, CNN, GAN's, Supervised Learning,
+                                                 Unsupervised Learning, RESNET50, </p>
+                                            <p><strong>Status:</strong> Complete: A+ <a
+                                                href="https://github.com/ryaoltech/COMP263_deeplearning_G5_tumorbrain"
+                                                target="_blank">Github</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Cloud Machine Learning Project -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/recruiter.png" alt="recuiter screenshot"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Cloud Machine Learning Project - AI recruiter</h5>
+                                            <p>"AI Recruiter" is a serverless app using AWS to streamline candidate 
+                                                evaluation with video analysis and match percentage reports</p>
+                                            <p><strong>Skills:</strong> Python, JavaScript, HTML, CSS, AWS Boto3
+                                             , AWS Chalice, RESTful API, Linux.</p>
+                                             <p><strong>AI services:</strong> AWS Transcribe, AWS Comprehend, AWS Textract.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Chatbot Project -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/chatbot.png" alt="Fatal Traffic Collisions"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Deep learning Chatbot project</h5>
+                                            <p>As part of the Software Development Project II Course, 
+                                                group three developed the backend and frontend of a chatbot
+                                                using deep learning for Centennial College</p>
+                                            <p><strong>Role:</strong> Backend Developer</p>
+                                            <p><strong>Skills:</strong> Python, JavaScript, HTML, CSS, NLP, Word2Vec, Flask.</p>
+                                            <p><strong>Status:</strong> Complete: A+ <a
+                                                href="https://github.com/Jbaruz/Deep_Learning_Chatbot"
+                                                target="_blank">Github</a></p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- SL Project -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
                                         <img src="../assets/images/fatalities_TO.png" alt="Fatal Traffic Collisions"
                                             class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h5>AI project</h5>
+                                            <h5>Supervised learning project</h5>
                                             <p>Develop a probalistic application to predict accidents in Toronto,
                                                 according to condition and behavior patterns.</p>
                                             <p><strong>Role:</strong> AI Developer</p>
@@ -88,6 +140,7 @@
                     </div>
                 </div>
 
+                <!-- Pivoting to Technology -->
                 <div class="accordion accordion-flush" id="accordionFlushExample2">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne2">
@@ -162,6 +215,8 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Innovations in Mining: Wear Abrasion Solutions -->
                 <div class="accordion accordion-flush" id="accordionFlushExample3">
                     <div class="accordion-item">
                         <h2 class="accordion-header" id="headingOne3">
