Update My Projects Page, new projects

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -288,6 +288,53 @@
                                         </div>
                                     </div>
                                 </div>
+                                <!-- SV2 points breakages -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/sv2points.png" alt="Cable shovel photo"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Premature SV2 point breakages</h5>
+                                            <p>Broken points by extreme impact conditions
+                                            </p>
+                                            <p><strong>Role:</strong> Supervisor</p>
+                                            <p><strong>Customer:</strong> Peru 2009 and 2019, Chile 2018 </p>
+                                            <p><strong>Solution:</strong> Change to a shorter design, which is the SV2RX point,
+                                                 to decrease the leverage effect, or use U90RT-A points.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Mofification of stabilizer WHP480 for Cerrejon Mine -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/stabilizer.png" alt="Cable shovel photo"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Modification of WHP480KSTAB stabilizer to use WHP480N02-U90 adapters.</h5>
+                                            <p>The trial was done on the P&H2800 cable shovel of the coal mine under soft digging conditions.
+                                            </p>
+                                            <p><strong>Role:</strong> TSG</p>
+                                            <p><strong>Customer:</strong> Colombia 2017</p>
+                                            <p><strong>Results:</strong>Succeded. It helped us change the cable shovel GET systems to our WHP GET 
+                                                product without the use of welding to stabilizers.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- Production shovel improvement by use of SV2VX points -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/points_comparison.png" alt="Cable shovel photo"
+                                            class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Production shovel improvement by use of SV2VX points</h5>
+                                            <p>The Trial was done in 495BI cable shovels - poor blasting zone
+                                            </p>
+                                            <p><strong>Role:</strong> Supervisor</p>
+                                            <p><strong>Customer:</strong> Peru 2011</p>
+                                            <p><strong>Results:</strong> Haul truck load reduction in 17 seconds.</p>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
