Update links, new links

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 19-04-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 19-05-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -39,6 +39,11 @@
                         <li class="nav-item">
                             <a class="nav-link" id="category7-tab" data-toggle="tab" href="#category7" role="tab"
                                 aria-controls="category7" aria-selected="false">NLP</a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link" id="category8-tab" data-toggle="tab" href="#category8" role="tab"
+                                aria-controls="category8" aria-selected="false">Certifications</a>
                         </li>
                         <!-- ... more tabs for more categories ... -->
                     </ul>
@@ -773,6 +778,51 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Gensim</h5>
                                             <a href="https://radimrehurek.com/gensim/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- ... more links for this category ... -->
+                            </div>
+                        </div>
+                        <!-- ... Certification ... -->
+                        <div class="tab-pane fade" id="category8" role="tabpanel" aria-labelledby="category8-tab">
+                            <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-codepen card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Codeacademy</h5>
+                                            <a href="https://www.codecademy.com/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-database card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Databricks Training</h5>
+                                            <a href="https://www.databricks.com/training/catalog"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fas fa-laptop-code card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Deep Learning Training</h5>
+                                            <a href="https://learn.deeplearning.ai/"
                                                 class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
