Update project, new project postgraduate section

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -24,9 +24,7 @@
                     <div id="flush-collapseOne4" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            "As part of my learning experience at Centennial College, I developed these projects.
-                            However, the AI project is particularly focused on what can be next to benefit the
-                            community."
+                            "I finished my AI program at Centennial College. As part of my learning experience, I will be working on personal projects to keep learning and have been updating my AI knowledge."
                         </div>
 
                         <!-- Projects grid -->
