--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -46,7 +46,7 @@
                                             <p><strong>Skills:</strong> Python, TensorFlow, CNN, Keras, PIL,
                                                  Wandb </p>
                                             <p><strong>Status:</strong> Complete<a
-                                                href=""
+                                                href="https://github.com/Jbaruz/waste_bin_classificcation"
                                                 target="_blank">Github</a></p>
                                         </div>
                                     </div>
