update projects - fix code

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 30-05-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 31-05-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -45,7 +45,7 @@
                                             <p><strong>Role:</strong> AI Developer</p>
                                             <p><strong>Skills:</strong> Python, TensorFlow, CNN, Keras, PIL,
                                                  Wandb </p>
-                                            <p><strong>Status:</strong> Complete<a
+                                            <p><strong>Status:</strong> Complete - <a 
                                                 href="https://github.com/Jbaruz/waste_bin_classificcation"
                                                 target="_blank">Github</a></p>
                                         </div>
