--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 31-05-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 09-06-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -30,6 +30,37 @@
                         <!-- Projects grid -->
                         <div class="row align-items-stretch">
                             <div class="row">
+                                <!-- Kotlin Dimensions Project -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/Kotlin_logo.png" style="width: 218px;" alt="Logo Kotlin project"
+                                            class="card-img-top img-fluid mx-auto">
+                                        <div class="card-body">
+                                            <h5>Kotlin Dimensions Project</h5>
+                                            <p>This project, is part of one of the reason why I came to Canada to learn AI, 
+                                                something that keep on stand by for several years. "TOP SECRET" until be ready to deploy.</p>
+                                            
+                                            <p><strong>Role:</strong> AI Developer</p>
+                                            <p><strong>Skills:</strong> Kotlin, Android Studio </p>
+                                            <p><strong>Status:</strong> 1 Phase - Research </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <!-- RAG CHATBOT Project -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/RAG_logo.png" style="width: 191px;" alt="Logo RAG project"
+                                            class="card-img-top img-fluid mx-auto">
+                                        <div class="card-body">
+                                            <h5>Retrievel Augmented Generation Project </h5>
+                                            <p>This project, keep me expanding the AI knowledge base on AI Agents. "TOP SECRET" until be ready to deploy.</p>
+                                            
+                                            <p><strong>Role:</strong> AI Developer</p>
+                                            <p><strong>Skills:</strong> Python, PyCharm, OpenAI, NLP, LLM </p>
+                                            <p><strong>Status:</strong> Test - 1st Demo version</p>
+                                        </div>
+                                    </div>
+                                </div>
                                 <!-- Waste Bin Classifiation -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
