--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 04-06-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 02-07-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -54,6 +54,42 @@
                         <div class="tab-pane fade show active" id="category1" role="tabpanel"
                             aria-labelledby="category1-tab">
                             <div class="row justify-content-center">
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-brands fa-python card-img mt-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> Python </h5>
+                                            <a href="https://www.python.org/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-shapes card-img mt-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> Julia </h5>
+                                            <a href="https://julialang.org/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-r card-img mt-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title"> R language </h5>
+                                            <a href="https://cran.r-project.org/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
