more links for NLP

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -1,7 +1,7 @@
 <%-include('partials/header.ejs')%>
     <%-include('partials/main_nav.ejs')%>
 
-        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 02-07-2024 -->
+        <!-- Filename: link.ejs | Author: Juan Arevalo | Date: 31-08-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container mt-5">
                 <h2 class="text-center mb-4">Important Links</h2>
@@ -48,9 +48,9 @@
                         <!-- ... more tabs for more categories ... -->
                     </ul>
 
-                    <!-- Learning Center -->
+                    <!-- LINKS -->
                     <div class="tab-content mt-3" id="linkTabContent">
-
+                        <!-- Learning Center -->
                         <div class="tab-pane fade show active" id="category1" role="tabpanel"
                             aria-labelledby="category1-tab">
                             <div class="row justify-content-center">
@@ -139,7 +139,6 @@
 
                             </div>
 
-                            <!-- ... more links for this category ... -->
                         </div>
 
                         <!-- ... Tools ... -->
@@ -788,6 +787,45 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Hugging Face</h5>
                                             <a href="https://huggingface.co"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-heading card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Haystack</h5>
+                                            <a href="https://haystack.deepset.ai/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-cloud-arrow-down card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Cohere</h5>
+                                            <a href="https://cohere.com/"
+                                                class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-solid fa-s card-img mt-3"
+                                            style="font-size: 3.5em; color: #000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Serper</h5>
+                                            <a href="https://serper.dev/"
                                                 class="btn btn-light" target="_blank"
                                                 rel="noopener noreferrer">Visit</a>
                                         </div>
