add more links in tools

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -147,6 +147,30 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-solid fa-crown card-img mt-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Streamlit</h5>
+                                            <a href="https://streamlit.io/" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
+                                        <i class="fa-regular fa-square card-img mt-3"
+                                            style="font-size: 3.5em; color: black ;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Gradio</h5>
+                                            <a href="https://huggingface.co/gradio" class="btn btn-light" target="_blank"
+                                                rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fa fa-code card-img mt-3" style="font-size: 3.5em; color: #000;"></i>
                                         <div class="card-body">
                                             <h5 class="card-title">Visualize Code</h5>
