add index improvement

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,14 +5,16 @@
     <main class="container py-5">
         <div class="jumbotron text-center bg-gradient-light">
             <h1 class="display-4">Embarking on an AI Odyssey!</h1>
+            <h2 class="subtitle">Blending Traditional Engineering with Cutting-Edge AI Innovation</h2>
+
             <!-- Add this line where you want to display the last updated date -->
             <p id="lastUpdated">Today's date:  </p>
             <!-- Add this in your body wherever you want the animation to appear -->
             <div class="star-wars-container">
                 <div class="crawl">
                     <div class="title">
-                        <p>I am Juan Arevalo</p>
-                        <h1>a dedicated Technical Product Manager</h1>
+                        <p>I’m Juan Arevalo, a Technical Product Manager turned AI Enthusiast.</p>
+                        <h1>Blending 15+ Years of Expertise in Abrasion Solutions and now with AI-Powered Innovation</h1>
                     </div>
                     <p>with a rich history in abrasion solutions and an evolving passion for software engineering and artificial intelligence. With over 15 years of experience in enhancing the durability and efficiency of ground-engaging tools, my journey has now embraced the transformative power of AI. </p>
                     <p>My goal is to pioneer AI-driven abrasion wear technologies that redefine predictive maintenance and design optimization. 'Innovation is seeing what everybody has seen and thinking what nobody has thought.' This belief motivates me to merge traditional engineering with cutting-edge AI, aiming to lead projects that set new standards in the industry.</p>
@@ -29,6 +31,7 @@
                             <blockquote class="blockquote">
                                 <p>"Challenging oneself in life is the best way to keep evolving; nothing is ever too late when you decide to be the owner of the results in your life."</p>
                                 <footer class="blockquote-footer">Jbaruz</footer>
+                                <p class="personal-reflection">This quote embodies my journey from traditional engineering to AI, emphasizing my belief in continuous growth.</p>
                             </blockquote>
                             <blockquote class="blockquote">
                                 <p>“Learning to code is learning to create and innovate.”</p>
