Add Sql link to link page

--- a/views/link.ejs
+++ b/views/link.ejs
@@ -69,6 +69,18 @@
 
                                 <div class="col-md-4 mb-3">
                                     <div class="card text-center">
+                                        <i class="fa-solid fa-laptop-code card-img mt-3"
+                                            style="font-size: 3.5em; color: #000000;"></i>
+                                        <div class="card-body">
+                                            <h5 class="card-title">Live PL/SQL</h5>
+                                            <a href="https://signon.oracle.com/signin/" class="btn btn-light"
+                                                target="_blank" rel="noopener noreferrer">Visit</a>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <div class="col-md-4 mb-3">
+                                    <div class="card text-center">
                                         <i class="fa-solid fa-shapes card-img mt-3"
                                             style="font-size: 3.5em; color: #000000;"></i>
                                         <div class="card-body">
