--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 09-06-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 01-09-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -307,112 +307,121 @@
                     <div id="flush-collapseOne3" class="accordion-collapse collapse" aria-labelledby="headingOne"
                         data-bs-parent="#accordionFlushExample">
                         <div class="accordion-body">
-                            "Over the course of eighteen years working as a technical global supporter for the
+                            "Over the course of more than fifteen years working as a technical global supporter for the
                             Spanish-speaking
                             Latin America region, I have been involved in numerous projects. Among the most significant
                             are the following:"
                         </div>
                         <div class="row align-items-stretch">
                             <div class="row">
+
                                 <!-- Colombia -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/dragline.png" alt="Dragline bucket"
-                                            class="card-img-top img-fluid">
+                                        <img src="../assets/images/drag_crack.png" alt="Dragline bucket" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h5>Assembly Dragline Bucket</h5>
-                                            <p>Assembled 115CY Profill Bucket in 20 days.</p>
-                                            <p><strong>Role:</strong> Lead Supervisor</p>
-                                            <p><strong>Customer:</strong> Drummond mine - Colombia (2014)</p>
+                                            <h5>Crack Repair on the Dragline Bucket under Warranty</h5>
+                                            <p><strong>Issue:</strong> An 11.5-inch-long crack was found on the left-hand side connection between the cheek plate and cheek plate extension. This crack originated from the original weld bead (made in the USA).</p>
+                                            <p><strong>Solution:</strong> The crack was removed just in time, and its removal was confirmed. The repair was completed using ESCO procedures and AWS D1.1 M:2010, Part F, Table 6.3. During its lifetime, no additional cracks appeared in the same area.</p>
+                                            <p><strong>Role:</strong> TSG</p>
+                                            <p><strong>Customer:</strong> Drummond Mine - Colombia (2014)</p>
                                         </div>
                                     </div>
                                 </div>
+
+                           
+                                <!-- Colombia -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/dragline.png" alt="Dragline bucket" class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>115CY Dragline Bucket Assembly</h5>
+                                            <p><strong>Issue:</strong> Provided support and supervision for the new bucket assembly according to ESCO procedures, with additional engineering support from Portland.</p>
+                                            <p><strong>Solution:</strong> Successfully assembled a 115CY Profill Bucket in 20 days, strictly following ESCO drawings and procedures, and completed the project on time.</p>
+                                            <p><strong>Role:</strong> Lead Supervisor</p>
+                                            <p><strong>Customer:</strong> Drummond Mine - Colombia (2014)</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+
                                 <!-- Panama -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/bucket_panama.png" alt="Aquadigger bucket Dredge"
-                                            class="card-img-top img-fluid">
+                                        <img src="../assets/images/bucket_panama.png" alt="Aquadigger bucket Dredge" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h5>Rebuild for Manufacturer Warranty</h5>
-                                            <p>03 Aquadigger Hoe Bucket rebuilt for Aleman Zubieta Dredge - Dredging
-                                                for the Culebra
-                                                Cut Expansion Project.</p>
+                                            <h5>Rebuild for Manufacturer Warranty: 03 Aquadigger Buckets for Aleman Zubieta Dredge</h5>
+                                            <p><strong>Issue:</strong> Premature wear and damage to buckets used in the Culebra Cut Expansion Project.</p>
+                                            <p><strong>Solution:</strong> Repaired the buckets over 30 days, modifying the design for wear protection in situ based on wear analysis of the damaged buckets, with remote support from the ESCO Engineering Team in Portland.</p>
                                             <p><strong>Role:</strong> Lead Supervisor</p>
-                                            <p><strong>Customer:</strong> Autoridad del Canal de Panama (2013-2014)
-                                            </p>
+                                            <p><strong>Customer:</strong> Autoridad del Canal de Panama (2013-2014)</p>
                                         </div>
                                     </div>
                                 </div>
+
                                 <!-- Peru -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/ant_cable.png" alt="Cable shovel photo"
-                                            class="card-img-top img-fluid">
+                                        <img src="../assets/images/ant_cable.png" alt="Cable shovel photo" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h5>Six Sigma Project</h5>
-                                            <p>Decreased cable shovel downtime from GET issues from 30 hours to 5
-                                                hours per month.
-                                            </p>
+                                            <h5>Six Sigma Project to Decrease Downtime for Cable Shovels</h5>
+                                            <p><strong>Issue:</strong> An average of 30 hours of downtime per month across four Bucyrus 495 BI cable shovels, primarily due to tasks involving ground engaging tools (GET).</p>
+                                            <p><strong>Solution:</strong> Successfully reduced downtime to an average of 5 hours per month by optimizing GET tasks.</p>
                                             <p><strong>Role:</strong> Supervisor</p>
                                             <p><strong>Customer:</strong> Antamina Mine - Peru (2010)</p>
                                         </div>
                                         <div class="card-footer bg-light text-center">
-                                            <img src="../assets/images/Antamina_certificated.png"
-                                                alt="Kiruwear App Award" class="award-img"
+                                            <img src="../assets/images/Antamina_certificated.png" alt="Award Certificate" class="award-img"
                                                 style="width: 20%; transition: transform 0.3s;">
-                                            <span class="ml-3">For this innovation, I was honored with a prestigious
-                                                certification
-                                                by the customer I collaborated with.</span>
+                                            <span class="ml-3">For this innovation, I was honored with a prestigious certification from the customer.</span>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- SV2 points breakages -->
+
+                                <!-- SV2 Points Breakages -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/sv2points.png" alt="Cable shovel photo"
-                                            class="card-img-top img-fluid">
+                                        <img src="../assets/images/sv2points.png" alt="Cable shovel photo" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h5>Premature SV2 point breakages</h5>
-                                            <p>Broken points by extreme impact conditions
-                                            </p>
-                                            <p><strong>Role:</strong> Supervisor</p>
-                                            <p><strong>Customer:</strong> Peru 2009 and 2019, Chile 2018 </p>
-                                            <p><strong>Solution:</strong> Change to a shorter design, which is the SV2RX point,
-                                                 to decrease the leverage effect, or use U90RT-A points.</p>
+                                            <h5>SV2 Point Breakages in Bucyrus 495BHI, P&H4100XPC, and CAT7495 Cable Shovels</h5>
+                                            <p><strong>Issue:</strong> Points were breaking due to extreme impact and operational conditions, including scratching over a length of 18.5 inches. These issues were reported and resolved in three different mines at different times—two cases in Peru and one in Chile—across various machines using the 85SV2 point.</p>
+                                            <p><strong>Solution:</strong> Implemented a change to a shorter design point, the SV2RX point, to reduce the leverage effect, or utilized a new design of U90RT-A points.</p>
+                                            <p><strong>Role:</strong> Supervisor and TSG</p>
+                                            <p><strong>Customer:</strong> Peru (2009 and 2019), Chile (2018)</p>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Mofification of stabilizer WHP480 for Cerrejon Mine -->
+
+
+                                <!-- Modification of Stabilizer WHP480 for Cerrejón Mine -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/stabilizer.png" alt="Cable shovel photo"
-                                            class="card-img-top img-fluid">
+                                        <img src="../assets/images/stabilizer.png" alt="Stabilizer modification photo" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h5>Modification of WHP480KSTAB stabilizer to use WHP480N02-U90 adapters.</h5>
-                                            <p>The trial was done on the P&H2800 cable shovel of the coal mine under soft digging conditions.
-                                            </p>
+                                            <h5>Modification of WHP480KSTAB Stabilizer to Use WHP480N02-U90 Adapters in P&H2800 Cable Shovel at Cerrejón Mine</h5>
+                                            <p><strong>Issue:</strong> The customer needed to switch from competitors to ESCO products as quickly as possible. However, the time required for welding tasks on the lip during the overhaul period was a limiting factor.</p>
+                                            <p><strong>Solution:</strong> Successfully implemented the transition to ESCO's Whisler Plus GET system by modifying the stabilizers, avoiding the need for welding, and enabling a faster changeover.</p>
                                             <p><strong>Role:</strong> TSG</p>
-                                            <p><strong>Customer:</strong> Colombia 2017</p>
-                                            <p><strong>Results:</strong>Succeded. It helped us change the cable shovel GET systems to our WHP GET 
-                                                product without the use of welding to stabilizers.</p>
+                                            <p><strong>Customer:</strong> Cerrejón Mine, Colombia (2017)</p>
                                         </div>
                                     </div>
                                 </div>
-                                <!-- Production shovel improvement by use of SV2VX points -->
+
+
+                                <!-- Production Shovel Improvement Using SV2VX Points -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
-                                        <img src="../assets/images/points_comparison.png" alt="Cable shovel photo"
-                                            class="card-img-top img-fluid">
+                                        <img src="../assets/images/points_comparison.png" alt="Cable shovel photo" class="card-img-top img-fluid">
                                         <div class="card-body">
-                                            <h5>Production shovel improvement by use of SV2VX points</h5>
-                                            <p>The Trial was done in 495BI cable shovels - poor blasting zone
-                                            </p>
+                                            <h5>Improvement of Bucyrus 495BHI Cable Shovel Production Using SV2VX Points</h5>
+                                            <p><strong>Issue:</strong> In poor blasting zones, the wear points lost penetration as they wore down, leading to a proportional decrease in efficiency, which negatively impacted the loading cycle time of CAT794 trucks.</p>
+                                            <p><strong>Solution:</strong> Reduced haul truck load time by 17 seconds for CAT793 trucks by implementing SV2VX points.</p>
                                             <p><strong>Role:</strong> Supervisor</p>
-                                            <p><strong>Customer:</strong> Peru 2011</p>
-                                            <p><strong>Results:</strong> Haul truck load reduction in 17 seconds.</p>
+                                            <p><strong>Customer:</strong> Peru (2011)</p>
                                         </div>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
