Add one project more focus on GET

--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,6 +1,6 @@
 <%- include('partials/header.ejs')%>
     <%- include('partials/main_nav.ejs')%>
-        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 01-09-2024 -->
+        <!-- Filename: projects.ejs | Author: Juan Arevalo | Date: 02-09-2024 -->
         <div class="d-flex justify-content-center bg-light vh-100">
             <main class="container py-5">
 
@@ -314,7 +314,7 @@
                         </div>
                         <div class="row align-items-stretch">
                             <div class="row">
-
+                                
                                 <!-- Colombia -->
                                 <div class="col-md-4 mb-4">
                                     <div class="card shadow-sm h-100">
@@ -421,6 +421,22 @@
                                         </div>
                                     </div>
                                 </div>
+
+                                <!-- Esco vs Hensley 2009 -->
+                                <div class="col-md-4 mb-4">
+                                    <div class="card shadow-sm h-100">
+                                        <img src="../assets/images/ESCvsHEN.png" alt="Cable shovel photo" class="card-img-top img-fluid">
+                                        <div class="card-body">
+                                            <h5>Competition: Esco vs Hensley (2009 - Peru)</h5>
+                                            <p><strong>Issue:</strong> A competition was held to determine the supplier of GET systems for the entire fleet of Bucyrus 495BHI Cable Shovels. SH002 and SH004 were fitted with ESCO’s 85SV2 system, while SH001 and SH003 used Hensley’s XSC12 system.</p>
+                                            <p><strong>Solution:</strong> Through our technical support, we successfully helped ESCO win the competition against Hensley. The decisive factor was the excessive cost to the customer, with Hensley invoicing USD 129,434 more than ESCO. Additionally, the downtime for GET changes was 122 hours for Hensley compared to 81 hours for ESCO during the competition period (Jan to Dec 2009).</p>
+                                            <p><strong>Role:</strong> Supervisor</p>
+                                            <p><strong>Customer:</strong> Peru</p>
+                                        </div>
+                                    </div>
+                                </div>
+
+
 
                             </div>
                         </div>
